<resources>
    <string name="app_name">DinnerWise</string>

    <!-- Shared preferences keys -->
    <string name="preference_key_went_through_onboarding">preference_onboarding</string>

    <!-- Activity titles -->
    <string name="homeScreen_title">Menu this week</string>
    <string name="fullRecipe_title">Recipe title here</string>
    <string name="ownRecipes_title">Own recipes</string>
    <string name="manageRecipe_title">Create a recipe</string>
    <string name="editRecipe_title">Edit the recipe</string>
    <string name="favourites_title">Favourites</string>
    <string name="groceries_title">Groceries</string>
    <string name="feedback_title">Feedback</string>
    <string name="preferences_title">Dietary preferences</string>
    <string name="about_title">About DinnerWise</string>
    <string name="settings_title">Account settings</string>

    <!-- Action bar icon buttons -->
    <string name="action_secondarymenu">Secondary menu</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_addtofavorites">Add to favorites</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_editRecipe">Edit recipe</string>

    <!-- Secondary menu options -->
    <string name="action_dietaryPreferences">Dietary preferences</string>
    <string name="action_accountSettings">Account settings</string>
    <string name="action_aboutDinnerWise">About DinnerWise</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_signOut">Sign out</string>
    <string name="week_activity_title">Menu this week</string>

    <!-- Onboarding titles -->
    <string name="onboarding_title_one">Dietary preferences</string>
    <string name="onboarding_title_two">Recipe options</string>
    <string name="onboarding_title_three">Grocery list</string>
    <string name="onboarding_title_four">Own recipes</string>

    <!-- Onboarding tips -->
    <string name="onboarding_tip_one">Set up your dietary preferences to tailor recipes to your needs.</string>
    <string name="onboarding_tip_two">Choose one of two suggested recipes for each day.</string>
    <string name="onboarding_tip_three">Quickly synchronise recipe ingredients with your grocery list.</string>
    <string name="onboarding_tip_four">Add your own recipes to use them along the provided ones.</string>

    <!-- Toasts -->
    <string name="recipe_saved_toast">Your recipe has been saved.</string>
    <string name="recipe_discarded_toast">Recipe discarded.</string>
    <string name="recipe_edited_toast">Recipe edited.</string>
    <string name="recipe_deleted_toast">Recipe deleted.</string>
    <string name="recipe_unfavourited_toast">Recipe removed from favourites.</string>

    <!-- Empty lists messages -->
    <string name="zero_own_recipes_message_text">You have not created any recipes yet. The recipes you create are private and you are the only person who will see them.
        \n\nPsst! Create your own recipe by clicking the “+” button below.</string>
    <string name="zero_favourites_message_text">You have not added any favourite recipes yet. \n\nPsst! When viewing a recipe, you can mark it as favourite by clicking the “♥“ icon in the top right corner.</string>
    <string name="no_search_results_found">No matching recipes found.</string>

    <!-- Secondary menu messages -->
    <string name="feedback_message_text">In case you encounter any problems with the application, or you want to make a suggestion, do not hesitate to write to us!</string>
    <string name="foodgroups_label">Checked items will be included in your diet.</string>
    <string name="allergies_label">Select items you are allergic to.</string>
    <string name="about_tagline">Simple daily \ndinner decisions</string>
    <string name="about_text">DinnerWise was created from the need of daily meals that can be both healthy and simple to prepare. We understand that ideas for exciting everyday dinners can be tough to come up with. While keeping track of all the necessary ingredients can become a chore. We hope that our recipes can bring you delicious meals and spark the joy of daily cooking, by offering delicious meal suggestions for you to choose from. \n\nThank you and enjoy!</string>
    <string name="settings_label">Change the current password.</string>

    <!-- Dialog messages -->
    <string name="delete_own_recipe_confirmation">Are you sure you want to delete this recipe?</string>

    <!-- Dialog button actions -->
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
